tests/cases/traits/errors/structural-capability-missing.ari
struct Packet {
  value: i64,
}

fn save(value: has serialize() -> i64) -> i64 {
  return 0;
}

fn main() -> i64 {
  return save(Packet { value: 1 });
}
